<resources>
    <string name="app_name">ESEOrthodromie</string>
    <string name="historic_button_label">Historique des positions</string>
    <string name="localisation_button_label">Distance entre votre téléphone et l\'ESEO</string>
    <string name="in_home">Dans la maison</string>
    <string name="item_name_phone_localisation">Paramètres de localisation</string>
    <string name="item_name_application_settings">Paramètre de l\'application</string>
    <string name="item_name_email" translatable="false">Email</string>
    <string name="item_name_site_eseo">Site de l\'ESEO</string>
    <string name="item_name_maps" translatable="false">Maps</string>
    <string name="button_localisation_difference_label">Calcul de la distance</string>
    <string name="position">Pas de position</string>
    <string name="dialog_title">Permission non acceptée</string>
    <string name="dialog_message">Vous avez refusez les permissions.\nImpossible de continuer dans l\'application.\nVoulez-vous l\'activer manuellement ?</string>
    <string name="dialog_accept">Oui</string>
    <string name="dialog_decline">Non</string>
    <string name="toolbar_title_historic">Historique des positions</string>
    <string name="toolbar_title_settings_menu">Menu des paramètres</string>
    <string name="button_label_clear_historic">Effacer l\'historique des positions</string>
    <string name="localisation_text_first_part">Vous êtes à </string>
    <string name="localisation_text_second_part"> de l\'ESEO</string>
    <string name="toolbar_title_distance">Calcul de distance</string>
    <string name="distance_text">Pas de localisation pour l\'instant</string>
    <string name="text_phone_localisation">Votre téléphone est localisé au : </string>
    <string name="text_email">Meilleure chaine de drone FPV actuelle</string>
    <string name="text_historic_empty">L\'historique est vide</string>
    <string name="your_title">Information</string>
    <string name="your_message">Vous ne pourrez pas calculer la distance sans la permission requet acceptée</string>
</resources>